--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+0.7.0
+    Initial release for Kill Bill 0.20.x
+
+0.6.0
+    Initial release for Kill Bill 0.19.x
+    Enlarge adyen_notifications.psp_reference to 255
+
+0.5.10
+    PostgreSQL support
+    Invoicing system integration
+    Add option to transform CHARGEBACK into payment failure
+    Add SEPA country code for SEPA requests
+
 0.5.9
     Add fallback merchant account
 
